# buckyos

./: .gitignore  AGENTS.md  README.md  README_zhCN.md  build_aios  devenv.py  make_local_pkg.py
doc/: BuckyOS Security Arch.md  key data.md  key events.md  key url.md  path_usage.md  port_usage.md  task data schema.md
notepads/: Agent 计划任务cli工具需求.md  AgentSession状态管理-实现TODO.md  AgentSession状态管理补充.md  ContactMgr的DID自动构造问题.md  NewOpenDANRuntime.md  Users & Agents 需求修改意见.md  agent-did-object-lib 需求.md  agent-memory-todo.md  agent-self-check tips.md  aicc-mgr.md  aicc-models-mgr.md  aicc-models-todo.md  aicc-upgrade-todo.md  beta2.2_vs_main_major_changes.md  control_panel_gap_todo.md  device-identity-local-path-todo.md  fix-agent-task-executor.md  fix-agent-tool-protoco-support.md  fix-workflow-task-scheulder.md  impl_buckyos_packaging.md  improve-behavior-report.md  kevent-kmsg测试实施跟踪.md  kevent-kmsg测试方案.md  kevent-kmsg测试计划.md  kevent_kmsg_test_plan.md  kevent_kmsg_test_report.md  lark-msg-tunnel.md  llm_compress_implementation_guide.md  llm_context_append_only_history.md  prd_buckyos_packaging.md  review_buckyos_packaging_current_scripts.md  sn-api-node-active-todo.md  uninstall_for_macos.md  websdk_provision_todo.md  workflow的定时触发器和计划任务管理.md  兼容性思考快速手册.md  无需返回的agent-tool.md  浮现Hints实现差距与TODO.md  统一url的思考.md
product/: 通用UI组件.md
src/: Cargo.toml  bucky_project.yaml  build_for_vm_test.py  build_host_buckycli.sh  debug_jarvis.sh  deno.json  start.py  (+5 more)
src/frame/agent-did-object-lib/: Cargo.toml
src/frame/agent-did-object-lib/src/: config.rs  error.rs  event_bridge.rs  lib.rs  router.rs  runtime.rs  tool.rs  types.rs
src/frame/agent-did-object-lib/src/adapters/: agent_runtime.rs  did_object.rs  filesystem.rs  local_http.rs  mod.rs  web.rs
src/frame/agent_tool_cli_dev/: Cargo.toml
src/frame/agent_tool_cli_dev/src/: lib.rs
test/kevent_kmsg/peer_container/harness/: Cargo.toml
test/kevent_kmsg/peer_container/harness/src/: main.rs
(+540 files in other folders)
