[package]
name = "agent-did-object-lib"
version.workspace = true
edition = "2021"
authors = ["BuckyOS DAO", "codex"]

[dependencies]
agent_tool = { path = "../agent_tool" }
async-trait = { workspace = true }
buckyos-api = { path = "../../kernel/buckyos-api" }
futures-util = { workspace = true }
name-client = { workspace = true }
name-lib = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
